@@ -1,7 +1,7 @@
 /*
  *  Mathlib : A C Library of Special Functions
  *  Copyright (C) 1998	Ross Ihaka
- *  Copyright (C) 2000	The R Development Core Team
+ *  Copyright (C) 2000, 2005 The R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -35,9 +35,17 @@ double pnf(double x, double n1, double n2, double ncp, int lower_tail, int log_p
 #endif
     if (n1 <= 0. || n2 <= 0. || ncp < 0)
         ML_ERR_return_NAN;
+    if (!R_FINITE(ncp))
+        ML_ERR_return_NAN;
+    if (!R_FINITE(n1) && !R_FINITE(n2)) /* both +Inf */
+        ML_ERR_return_NAN;
 
     if (x < 0.0)
         return R_DT_0;
+
+    if (n2 > 1e8) /* avoid problems with +Inf and loss of accuracy */
+        return pnchisq(x * n1, n1, ncp, lower_tail, log_p);
+
     y = (n1 / n2) * x;
     return pnbeta(y / (1 + y), n1 / 2., n2 / 2., ncp, lower_tail, log_p);
 }
